# Full-RAIccoon-Package

./: .env.example  .gitignore  README.md
components/local-sandbox/: CONTRIBUTING.md  ISSUE_requirements.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
components/local-sandbox/adapters/wsl/: VBoxManage  setup-wsl-vboxmanage.sh
components/local-sandbox/configs/: local.example.yaml
components/local-sandbox/docs/: wsl-windows-virtualbox.md
components/local-sandbox/rules/suricata/: raiccoon-local.rules
components/local-sandbox/rules/yara/: raiccoon_static_triage.yar
components/local-sandbox/scripts/: run_yara_triage.sh  setup_flarevm.ps1  setup_remnux.sh
components/local-sandbox/src/raiccoon_sandbox/: local_vbox_detonate.py
components/local-sandbox/tests/: test_local_vbox_detonate.py  test_rulesets.py  test_wsl_adapter.py
components/portal/: .env.example  .gitignore  README.md  app.py  requirements.txt
components/portal/deploy/: Caddyfile  nginx.conf  raiccoon-portal.service
components/portal/playbooks/: hash-enrichment.yaml  ot-asset-triage.yaml  phishing-triage.yaml
components/portal/portal/: __init__.py
components/portal/static/: style.css
deploy/opencti/: docker-compose.yml
deploy/systemd/: raiccoon-portal.service
docs/: architecture.md  rollout-checklist.md
scripts/: bootstrap.sh  run-portal.sh  sanitize-check.sh  smoke-test.sh
skills/raiccoon-malware-analysis/: SKILL.md
skills/raiccoon-opencti-ingestion/: SKILL.md
skills/raiccoon-portal-operations/: SKILL.md
skills/raiccoon-report-production/: SKILL.md
(+18 files in other folders)
