[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raiccoon-malware-sandbox"
version = "0.1.0"
description = "Local-first VirtualBox malware sandbox runner and artifact parser"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
evtx = ["python-evtx"]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
